lavet funktioner til infoknapper færdig

--- a/index.html
+++ b/index.html
@@ -80,12 +80,7 @@
 
         </section>
         <div class="infotext">
-            <p> Da ITAR er en ny uddannelse er der ikke tal på løn endnu.
-                <br>
-                Vi har baseret vores tal på en af de mulige stillinger man kan få som færdiguddannet,
-                <br>
-                navnligt IT-projektleder
-            </p>
+            <button type="button" class="infoButton" id="salaryChartInfo">info</button>
         </div>
     </section>
 
@@ -104,6 +99,7 @@
             </div>
         </section>
         <div class="infotext">
+            <button type="button" class="infoButton" id="genderChartInfo">info</button>
             <p>info</p>
 
         </div>
@@ -112,7 +108,7 @@
             <canvas id="genderChart3" class="duoCharts"></canvas>
         </section>
         <div class="infotext">
-            <p>info</p>
+            <button type="button" class="infoButton" id="duoChartInfo">info</button>
         </div>
     </section>
 
@@ -132,7 +128,7 @@
             </div>
         </section>
         <div class="infotext">
-            <p></p>
+            <button type="button" class="infoButton" id="wellbeingChartInfo">info</button>
 
 
         </div>
@@ -156,7 +152,7 @@
             <canvas id="wellbeingChart5" class="surveyCharts"></canvas>
         </section>
         <div class="infotext">
-            <p> info</p>
+            <button type="button" class="infoButton" id="wellBeingMultiInfo">info</button>
         </div>
     </section>
     <section id="jobSection" class="mainSections">
@@ -178,21 +174,16 @@
             </div>
         </section>
         <div class="infotext">
-            <p></p>
+            <button type="button" class="infoButton" id="jobChartInfo">info</button>
         </div>
-        <section id="wellbeingMultisection2" class="subSections">
+        <section id="jobMultiSection1" class="subSections">
             <canvas id="jobChart2" class="surveyCharts"></canvas>
             <canvas id="jobChart3" class="surveyCharts"></canvas>
             <canvas id="jobChart4" class="surveyCharts"></canvas>
             <canvas id="jobChart5" class="surveyCharts"></canvas>
         </section>
         <div class="infotext">
-            <p> Da Itar er for ny en uddannelse til at vi har data på den,
-                <br>
-                har vi antaget at jobløseheden ligger på niveau med de andre
-                <br>
-                uddannelser. Det er også derfor "jobstart" er tom for Itar.
-            </p>
+            <button type="button" class="infoButton" id="jobMultiInfo">info</button>
         </div>
     </section>
 </main>
