ændret hjemmeside tekst

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
             <canvas id="genderChart1" class="mainCharts"></canvas>
             <div>
                 <p class="sectionText">
-                    Vi har en 43/57 kønsfordeling på skolen hvilket er superfedt, <br>
-                    men viste du at hvis vi fjern MEKO fra ligningen er vi nede på <br>
-                    en 17/83 fordeling? Det er derfor vi har brug for dig!
+                    Vi har ikke så stor en kønsforskel på skolen som man måske skulle tro! <br>
+                    På disse grafer kan du både se hvordan kønsfordelingen ligger på de forskellige <br>
+                    uddannelser, men også hvordan kvinder hæver det faglige niveau.
                 </p>
             </div>
         </section>
@@ -120,8 +120,7 @@
             <canvas id="wellbeingChart1" class="mainCharts"></canvas>
             <div>
                 <p class="sectionText">
-                    Vi har en lav frafaldsrate på alle studier, og folk trives generelt super godt hen over alle vores
-                    IT-uddannelser.
+                   På EK kan vi prale men en høj trivsel, og en lav frafaldsrate!
                 </p>
 
 
@@ -164,10 +163,9 @@
                     behøver ikke at
                     være så bekymret! Arbejdsløsheden inde for disse uddannelser ligger helt nede mellem 1-5% for
                     uddannselserne.
-                    <br><br>
-                    En af de helt store skridt efter du har færdiggjordt din uddannelse, er at komme ud på
-                    arbejdsmarkedet.
-                    Her kan du se hvordan nyuddannede inde for branchen typisk finder deres første job.
+                    <br>
+                    Alle veje leder til Rom, der er ikke nogen "forkert" måde at komme videre på!
+
                 </p>
             </div>
         </section>
