--- a/index.html
+++ b/index.html
@@ -170,14 +170,17 @@
             </div>
         </section>
         <div class="infotext">
-
         </div>
+<div id="boxchart1">
+
         <section id="jobMultiSection1" class="subSections">
-            <canvas id="jobChart2" class="surveyCharts"></canvas>
-            <canvas id="jobChart3" class="surveyCharts"></canvas>
-            <canvas id="jobChart4" class="surveyCharts"></canvas>
-            <canvas id="jobChart5" class="surveyCharts"></canvas>
+            <canvas id="jobChart2" ></canvas>
+            <canvas id="jobChart3" ></canvas>
+            <canvas id="jobChart4" ></canvas>
+            <canvas id="jobChart5" ></canvas>
         </section>
+        </div>
+
         <div class="infotext">
             <button type="button" class="infoButton" id="jobMultiInfo">info</button>
         </div>
