--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
 
     <select id="mobil-menu">
         <option value="" disabled selected>Vælg et emne...</option>
-        <option value="#salarySection">Løn</option>
         <option value="#genderSection">Kønsfordeling</option>
-        <option value="#jobSection">Jobstart</option>
         <option value="#wellbeingSection">Trivsel</option>
+        <option value="#jobSection">Jobstart</option>
+        <option value="#salarySection">Løn</option>
+
+
+
     </select>
 
 </nav>
@@ -122,7 +125,7 @@
         </div>
         <div id="boxchart2">
         <section id="wellbeingMultisection1" class="subSections">
-            <canvas id="wellbeingChart2" ></canvas>
+            <canvas id="wellbeingChart2"></canvas>
             <canvas id="wellbeingChart3"></canvas>
             <canvas id="wellbeingChart4"></canvas>
             <canvas id="wellbeingChart5"></canvas>
@@ -154,10 +157,10 @@
 <div id="boxchart1">
 
         <section id="jobMultiSection1" class="subSections">
-            <canvas id="jobChart2" ></canvas>
-            <canvas id="jobChart3" ></canvas>
-            <canvas id="jobChart4" ></canvas>
-            <canvas id="jobChart5" ></canvas>
+            <canvas id="jobChart2" class="surveyCharts"></canvas>
+            <canvas id="jobChart3" class="surveyCharts" ></canvas>
+            <canvas id="jobChart4" class="surveyCharts"></canvas>
+            <canvas id="jobChart5" class="surveyCharts" ></canvas>
         </section>
         </div>
 
