lavet store bogstaver

--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
             <label for="lønmenu"> </label>
             <select name="løn" id="lønmenu">
                 <option value="gennemsnit" id="dropdowngen"> Gennemsnit</option>
-                <option value="max" id="dropdownmax"> max</option>
-                <option value="min" id="dropdownmin"> min</option>
+                <option value="max" id="dropdownmax"> Max</option>
+                <option value="min" id="dropdownmin"> Min</option>
             </select>
         </div>
 
